# LogisticService

./: CHANGELOG.md  CMakeLists.txt  Doxyfile  README.md  conanfile.txt  folder_structure.md
config/: request_format.json
database/: database.sql  inventoryDb.cpp  user_db.c
docker/: database.sql  docker-compose.yml
include/client/: client.h
include/common/: alertHandler.hpp  anomalieHandler.hpp  errorHandler.hpp  lowStockChecker.hpp  menu.h  orderStorage.hpp  orderValidation.hpp  utils.h
include/common/auth/: auth_proxy.h
include/database/: inventoryDb.hpp  user_db.h
include/server/: server.hpp
src/client/: client.c  main.c
src/common/: alertHandler.cpp  anomalieHandler.cpp  errorHandler.cpp  lowStockChecker.cpp  menu.c  orderStorage.cpp  orderValidation.cpp  utils.c
src/common/auth/: auth_proxy.c
src/server/: main.cpp  server.cpp
test/client/: main.c  test_client.c
test/common/: testAlertHandler.cpp  testAnomalieHandler.cpp  testErrorHandler.cpp  testLowStockChecker.cpp  testOrderStorage.cpp  testOrderValidation.cpp
test/common/auth/: testAuthReal.cpp  test_auth_proxy.c
test/database/: testInventoryDb.cpp  testUserDb.cpp
test/include/: testAlertHandler.hpp  testAnomalieHandler.hpp  testAuthReal.hpp  testErrorHandler.hpp  testInventoryDb.hpp  testLowStockChecker.hpp  testOrderStorage.hpp  testOrderValidation.hpp  testServer.hpp  testUserDb.hpp  test_auth_proxy.h  test_client.h
test/server/: testServer.cpp
